<resources>
    <string name="app_name">CryptoWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    App info screen-->
    <string name="welcome">Welcome to Your Smart Wallet</string>
    <string name="app_info">We proudly present you crypto wallet app where you can send &amp; receive money in easy way with build in chat.</string>
    <string name="login_here">Login here</string>
    <string name="already_have_an_account">Already have an account</string>

    <!--    Auth screens-->
    <string name="login_to_account">Login to Account</string>
    <string name="enter_uid">Enter uid</string>
    <string name="enter_name">Enter name</string>
    <string name="login">Login</string>
    <string name="register_new_account">Register new Account</string>
    <string name="register">Register</string>

    <!--    Wallet auth screens-->
    <string name="create_new_smart_wallet">Create New Smart Wallet</string>
    <string name="create_wallet_info">Create Private &amp; Secure wallet. Private keys never leave your device</string>
    <string name="create_wallet">Create wallet</string>
    <string name="i_already_have_a_wallet">I already have a wallet</string>
    <string name="copy">Copy</string>
    <string name="confirm_mnemonic">Confirm mnemonic</string>
    <string name="import_wallet">Import wallet</string>
    <string name="paste">Paste</string>
    <string name="btn_import">Import</string>
    <string name="btn_create">Create</string>

    <string-array name="priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>