<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".ui.auth.AboutAppFragment">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:background="@drawable/ic_blockchain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainGuideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <TextView
        android:id="@+id/tvInfo"
        style="@style/MainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainGuideline" />

    <TextView
        android:id="@+id/tvAbout"
        style="@style/SubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInfo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        style="@style/OrangeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_new_account"
        android:layout_marginBottom="@dimen/btn_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLoginHere"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLoginHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_horizontal_xxs"
        android:gravity="start"
        android:text="@string/login_here"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvHaveAccount"
        app:layout_constraintStart_toEndOf="@id/tvHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>