<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".ui.auth.wallet.ImportingMnemonicFragment">

    <ProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:indeterminate = "true"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:progress="0"
        app:layout_constraintTop_toBottomOf="@id/tvPaste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:background="@drawable/ic_wallet"
        app:layout_constraintBottom_toTopOf="@id/mainGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/tvCreate"
        style="@style/MainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/import_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainGuideline" />

    <EditText
        android:id="@+id/etMnemonic"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/common_horizontal_5xl"
        android:background="@color/light_purple"
        android:lineSpacingExtra="10sp"
        android:paddingStart="@dimen/common_vertical_l"
        android:paddingTop="@dimen/common_vertical_5xl"
        android:hint="Enter your mnemonic"
        android:textColorHint="@color/white"
        android:paddingEnd="@dimen/common_vertical_l"
        android:paddingBottom="@dimen/common_vertical_5xl"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreate"
        tools:text="this text for kjfkdd kjfsgkf kjregoejfkd rke gkjfdng dmgnfk fkgj;dgr gkjrdfl" />

    <TextView
        android:id="@+id/tvPaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_vertical_l"
        android:layout_marginEnd="@dimen/common_vertical_l"
        android:text="@string/paste"
        android:textColor="@color/orange"
        android:textSize="@dimen/text_size_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMnemonic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnImportWallet"
        style="@style/OrangeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_margin_bottom"
        android:text="@string/btn_import"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>